--- a/lib/scss/partials/_typography.scss
+++ b/lib/scss/partials/_typography.scss
@@ -47,16 +47,13 @@ https://github.com/devinhunt/typebase.css
 I've edited it a bit, but it's a nice starting point.
 */
 
+@import url('https://fonts.googleapis.com/css?family=VT323');
 
 // font stacks
-$sans-serif:        "Helvetica Neue", Helvetica, Arial, sans-serif;
-$serif:             "Georgia", Cambria, Times New Roman, Times, serif;
-
-/*
- i imported this one in the functions file so bones would look sweet.
- don't forget to remove it for your site.
-*/
-$lato:              'Lato', $sans-serif;
+$sans-serif:          "Helvetica Neue", Helvetica, Arial, sans-serif;
+$serif:               "Georgia", Cambria, Times New Roman, Times, serif;
+$lato:                'Lato', $sans-serif;
+$default-font-stack:  'VT323', monospace;
 
 /*
 some nice typographical defaults
