--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -16,7 +16,7 @@
 @import "partials/mixins";
 
 // the grid
-@import "boostrap/gridonly";
+@import "bootstrap/gridonly";
 
 // alert boxes
 @import "modules/alerts";
