--- a/lib/scss/breakpoints/_base.scss
+++ b/lib/scss/breakpoints/_base.scss
@@ -16,11 +16,11 @@ GENERAL STYLES
 *********************/
 
 body {
-	font-family: $lato;
+	font-family: $default-font-stack;
 	font-size: 100%;
 	line-height: 1.5;
 	color: $text-color;
-	background-color: $gray;
+	background-color: $page-bg;
   	-webkit-font-smoothing: antialiased;
   	-moz-osx-font-smoothing: grayscale;
 }
@@ -153,16 +153,19 @@ HEADER STYLES
 *********************/
 
 .header {
-	background-color: $black;
+	background-color: $page-bg;
 }
 
-	#logo {
-		margin: 0.75em 0;
+#logo {
+  margin: 0.75em 0;
 
-		a {
-			color: $white;
-		}
-	}
+  a {
+    color: $page-link-color;
+    &:hover {
+      color: $page-link-hover-color;
+    }
+  }
+}
 
 /*********************
 NAVIGATION STYLES
@@ -184,7 +187,7 @@ and more scalable.
 
 		a {
 			display: block;
-			color: $white;
+			color: $page-link-color;
 			text-decoration: none;
 			padding: 0.75em;
 
@@ -256,19 +259,19 @@ POSTS & CONTENT STYLES
 }
 
 		.hentry {
-			background-color: $white;
+			background-color: $page-bg;
 			border-radius: 3px;
 			margin-bottom: 1.5em;
 			border: 1px solid $border-color;
 
 			header {
-				border-bottom: 1px solid $light-gray;
+				border-bottom: 1px solid $border-color;
 				padding: 1.5em;
 			}
 
 			footer {
 				padding: 1.5em;
-				border-top: 1px solid $light-gray;
+				border-top: 1px solid $border-color;
 
 				p {
 					margin: 0;
@@ -862,8 +865,8 @@ FOOTER STYLES
 
 .footer {
 	clear: both;
-	background-color: $black;
-	color: $light-gray;
+	background-color: $page-bg;
+	color: $text-color;
 }
 
 	/*
