--- a/lib/scss/partials/_variables.scss
+++ b/lib/scss/partials/_variables.scss
@@ -11,6 +11,18 @@ No one likes a mess.
 
 ******************************************************************/
 
+
+/*********************
+THEME DEFAULTS
+*********************/
+
+$page-bg:                 #323944;
+$page-text-color:         #00bb00;
+$page-link-color:         #00ff00;
+$page-link-hover-color:   #00dd00;
+
+
+
 /*********************
 COLORS
 Need help w/ choosing your colors? Try this site out:
@@ -27,25 +39,19 @@ $white:             #fff;
 
 $light-gray:        #f8f9fa;
 $gray:              #eaedf2;
-$text-color:        #5c6b80;
+
 $meta-gray:         #9fa6b4;
-
 $tan:               #eceee5;
-
 $green:             #7dd667;
-
-$bones-pink:        #f01d4f;
 $blue:              #2980b9;
 
-$link-color:        $bones-pink;
-$link-hover:        darken($link-color, 9%);
+$text-color:        $page-text-color;
+$link-color:        $page-link-color;
+$link-hover:        $page-link-hover-color;
 
-$border-color:      #ccc;
+$border-color:      $page-text-color;
 $disabled-gray:     #cfcfcf;
 
 
-/*
-Here's a great tutorial on how to
-use color variables properly:
-http://sachagreif.com/sass-color-variables/
-*/
+
+
